environments/demo/edge-config/active/3b-httpbin-vs-intranet-https.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs-intranet-https
  namespace: gloo-system
  labels:
    gateway-type: private
spec:
  sslConfig: # the internet-facing proxy uses TLS
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system
